Alignment fix.

--- a/style.css
+++ b/style.css
@@ -4272,6 +4272,10 @@ h6 {
   border-left-width: 5px;
 }
 
+.alert-box {
+  z-index: 1;
+}
+
 /***************************
  * CUSTOM STYLE OVERRIDE *
  ***************************/
@@ -4383,7 +4387,8 @@ a {
 .custom-container {
   margin: 0 auto;
   max-width: 1144px;
-  padding: 0 1rem;
+  padding-left: calc(env(safe-area-inset-left, 0) + 0.75rem);
+  padding-right: calc(env(safe-area-inset-left, 0) + 0.75rem);
 }
 
 .custom-category-container,
@@ -4807,6 +4812,7 @@ a {
   background-color: var(--color-blue);
   background-color: #006ab3;
   /* default supported fallback style */
+  height: 64px;
   z-index: 1;
 }
 
@@ -5293,30 +5299,10 @@ main.main-sidebar {
   src: local("Material Icons"), local("MaterialIcons-Regular"), url("$assets-materialicons-regular-woff2") format("woff2"), url("$assets-materialicons-regular-woff") format("woff"), url("$assets-materialicons-regular-svg#webfont") format("svg"), url("$assets-materialicons-regular-ttf") format("truetype");
 }
 
-.material-icons {
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  /* Preferred icon size */
-  display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-  /* Support for IE. */
-  font-feature-settings: "liga";
-  vertical-align: top;
-}
-
+/* Support for all WebKit browsers. */
+/* Support for Safari and Chrome. */
+/* Support for Firefox. */
+/* Support for IE. */
 .black-icon {
   color: var(--color-almost-black);
   color: #424242;
